--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "@tonaljs/tonal": "^4.6.0",
+    "bootstrap": "^4.6.0",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
