--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/cli": "^4.46.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "@tonaljs/tonal": "^4.6.0",
+    "aws-amplify": "^3.3.26",
     "bootstrap": "^4.6.0",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
